# data-structure

./: CMakeLists.txt  README.md  main.c
src/header/distribution/: func.h
src/header/pub/: public.h
src/main/SingleLink/: SingleLinkList.c  SingleLinkList2.c  SingleLinkedDemo3.c
